--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -28,9 +28,7 @@ inputs:
 
 configs:
   repo-metadata:
-    parameters:
-      description: 'Jekyll website on AWS'
-      secrets:
+    secrets:
       - name: AWS_ACCESS_KEY_ID
         value: ${{inputs.AWS_ACCESS_KEY_ID}}
       - name: AWS_SECRET_ACCESS_KEY
@@ -44,9 +42,12 @@ configs:
   branches:
     - name: main
       parameters:
-        enforce-admins: true
+        allow-force-pushes: false
+        allow-deletions: false
+        enforce-admins: false
         required-pull-request-reviews:
           dismiss-stale-reviews: true
+          require-code-owner-reviews: true
           required-approving-review-count: 1
 
 init:
