--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -11,34 +11,21 @@ inputs:
   - name: AWS_ACCESS_KEY_ID
     description: aws access key id
     is-secret: true
-
   - name: AWS_SECRET_ACCESS_KEY
     description: aws secret access key
     is-secret: true
-
   - name: DOMAIN_NAME
     description: domain name of the website
-
   - name: HOST_NAME
     default: www
     description: host name of website
-
   - name: HOSTED_ZONE_ID
     description: aws route53 hosted zone id
-
 configs:
   repo-metadata:
-    secrets:
-      - name: AWS_ACCESS_KEY_ID
-        value: ${{inputs.AWS_ACCESS_KEY_ID}}
-      - name: AWS_SECRET_ACCESS_KEY
-        value: ${{inputs.AWS_SECRET_ACCESS_KEY}}
-      - name: DOMAIN_NAME
-        value: ${{inputs.DOMAIN_NAME}}
-      - name: HOST_NAME
-        value: ${{inputs.HOST_NAME}}
-      - name: HOSTED_ZONE_ID
-        value: ${{inputs.HOSTED_ZONE_ID}}
+    topics:
+      - jekyll
+      - aws
   branches:
     - name: main
       parameters:
@@ -49,6 +36,15 @@ configs:
           dismiss-stale-reviews: true
           require-code-owner-reviews: true
           required-approving-review-count: 1
-
+  environments:
+    - name: production
+      parameters:
+        allowed-branch-rules:
+          - main
+        secrets:
+          - name: AWS_ACCESS_KEY_ID
+            value: ${{inputs.AWS_ACCESS_KEY_ID}}
+          - name: AWS_SECRET_ACCESS_KEY
+            value: ${{inputs.AWS_SECRET_ACCESS_KEY}}
 init:
   uses: stack-init.yaml
