--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,9 +31,7 @@ jobs:
   deploy-to-production:
     needs: build
     runs-on: ubuntu-latest
-    environment: 
-      name: production
-      url: https://www.ericksonapartments.com
+    environment: production
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v3
