--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -10,17 +10,22 @@ branding:
 inputs:
   - name: AWS_ACCESS_KEY_ID
     description: aws access key id
+    type: string
     is-secret: true
   - name: AWS_SECRET_ACCESS_KEY
     description: aws secret access key
+    type: string
     is-secret: true
   - name: DOMAIN_NAME
     description: domain name of the website
+    type: string
   - name: HOST_NAME
     default: www
     description: host name of website
+    type: string
   - name: HOSTED_ZONE_ID
     description: aws route53 hosted zone id
+    type: string
 configs:
   repo-metadata:
     topics:
